--- a/picky_app/static/css/picky.css
+++ b/picky_app/static/css/picky.css
@@ -8,6 +8,37 @@ box-sizing: border-box;
 /* Small screens (default) */
 html { font-size: 100%; }
 
+ul{
+      list-style-type: none;
+    }
+    
+    div ul li img{
+      display: block;
+      position: absolute;
+      left: 35%;
+      top:  35%;
+/*      margin-left: auto;
+      margin-right: auto;*/
+      height: 300px; 
+      width: 300px;
+      animation: slideDown;
+
+    }
+
+    body {
+  background-image:url('/static/images/restaurant_icons.png');
+  background-repeat:repeat;
+}
+
+h1 {
+  text-align:center;
+  font-family:Lato;
+}
+
+
+
+
+
 img {
 	height:260px;
 }
