--- a/picky_app/templates/index.html
+++ b/picky_app/templates/index.html
@@ -5,11 +5,34 @@
 {% block title %}INDEX PAGE{% endblock %}
 
 {% block content %}
+<div class="center">
+	<ul>
+	    <li><img id='img1' src='/static/images/kids.jpg' ></li>
+	    <li><img id='img2' src='/static/images/ambient.jpg'  ></li>
+	    <li><img id='img3' src='/static/images/romantic.jpg' ></li>
+	</ul>
+</div>
+	<div class="kids" style="display: none">
+	  <ul>
+	    <li><a href="http://www.yelp.com/biz/bibimbowl-sunnyvale-2"><img id='kid1' src="http://s3-media4.fl.yelpcdn.com/bphoto/pEsEWwnFfbIdnxX2lVVzdQ/l.jpg" ></a></li>
+	    <li><a href="href": "http://www.yelp.com/biz/little-india-cafe-sunnyvale"><img id='kid2' src="http://s3-media1.fl.yelpcdn.com/bphoto/caKHdofdUPkahoLEgjRxMw/l.jpg" ></a></li> 
+	    <li><a href="href": "http://www.yelp.com/biz/dish-n-dash-sunnyvale"><img id='kid3' src="http://s3-media4.fl.yelpcdn.com/bphoto/SsToh0uk7kJMbPssqT9ISg/l.jpg" ></a></li>
+	    <li><a href="http://www.yelp.com/biz/sushi-club-sunnyvale"><img id='kid4' src="http://s3-media4.fl.yelpcdn.com/bphoto/fbrtdllREkoyTYPAnt2suQ/l.jpg" ></a></li>
+	    <li><a href="http://www.yelp.com/biz/bagel-street-cafe-sunnyvale"><img id='kid5' src="http://s3-media3.fl.yelpcdn.com/bphoto/yNE7_6V-78CZ2cnmjO5mIw/l.jpg" ></a></li>
+	    <li><a href="http://www.yelp.com/biz/sunnyvale-cafe-sunnyvale-2"><img id='kid6' src="http://s3-media2.fl.yelpcdn.com/bphoto/24WHBWcbXzGYncRAqEtTGw/l.jpg" ></a></li>
+	    <li><a href="http://www.yelp.com/biz/gombei-bento-sunnyvale"><img id='kid7' src="http://s3-media4.fl.yelpcdn.com/bphoto/_6Jg-tdya39nVe8jH6UAbQ/l.jpg" ></a></li>
+	    <li><a href="http://www.yelp.com/biz/toofu-sunnyvale"><img id='kid8' src="http://s3-media2.fl.yelpcdn.com/bphoto/TsP8EYYEjL4nI93G1WxRAw/l.jpg" ></a></li>
+	    <li><a href="http://www.yelp.com/biz/hobees-restaurant-sunnyvale"><img id='kid9' src="http://s3-media4.fl.yelpcdn.com/bphoto/M5D-pGba1YUBHMfwaOkc4Q/l.jpg" ></a></li>
+	    <li><a href="http://www.yelp.com/biz/rubys-taqueria-sunnyvale"><img id='kid10' src="http://s3-media1.fl.yelpcdn.com/bphoto/6c92HzaU_VE5_t6tUqG7Ew/l.jpg" ></a></li>
+	  </ul>
+	</div>
+
+<!-- 
 <div class="item-wrapper">
     <div class="item-container">
         <img src="{% static 'images/ambient.jpg' %}">
         <img src="{% static 'images/kids.jpg' %}">
-        <img src="{% static 'images/romantic.jpg' %}">HI THERE
+        <img src="{% static 'images/romantic.jpg' %}">HI THERE -->
 
 
 {% endblock %}
