--- a/picky_app/static/css/picky.css
+++ b/picky_app/static/css/picky.css
@@ -13,12 +13,14 @@ ul{
     }
     
     div ul li img{
-      display: block;
+      /*display: block;
       position: absolute;
       left: 35%;
       top:  35%;
-/*      margin-left: auto;
+     margin-left: auto;
       margin-right: auto;*/
+      position:absolute;
+      left:0px;
       height: 300px; 
       width: 300px;
       animation: slideDown;
@@ -31,7 +33,6 @@ ul{
 }
 
 h1 {
-  text-align:center;
   font-family:Lato;
   font-size: 60px;
   color: #3eb489;
