--- a/picky_app/templates/base.html
+++ b/picky_app/templates/base.html
@@ -11,12 +11,31 @@
 </head>
 
 <body>
+<div id="horizon" style="color: white;
+text-align: center;
+position: absolute;
+top: 15%;
+left: 0px;
+width: 100%;
+height: 1px;
+overflow: visible;
+visibility: visible;
+display: block;">
+<div class="content" style="font-family: Verdana, Geneva, Arial, sans-serif;
+margin-left: -150px;
+position: absolute;
+top: -35px;
+left: 50%;
+width: 300px;
+height: 300px;
+visibility: visible;">
 <h1>PICKY</h1>
 <div class="container">
   {% block content %}
   {% endblock %}
 </div>
-
+</div>
+</div>
 <!-- Include hammer.js library -->
 <script src="//d3kt63i4n3r3r8.cloudfront.net/assets/examples/hammer-1.1.1-74c3a245b2081b735186d31209e4569f.js"></script>
 <script>
