--- a/picky_app/templates/base.html
+++ b/picky_app/templates/base.html
@@ -24,16 +24,29 @@ display: block;">
 <div class="content" style="font-family: Verdana, Geneva, Arial, sans-serif;
 margin-left: -150px;
 position: absolute;
-top: -35px;
+top: -50px;
 left: 50%;
 width: 300px;
 height: 300px;
 visibility: visible;">
 <h1>PICKY</h1>
+<h3>Swipe left for no and right for yes.</h3>
 <div class="container">
   {% block content %}
   {% endblock %}
 </div>
+</div>
+<div id="horizon2" style="color: white;
+text-align: center;
+position: absolute;
+top: 20%;
+left: 0px;
+width: 100%;
+height: 1px;
+overflow: visible;
+visibility: visible;
+display: block;">
+
 </div>
 </div>
 <!-- Include hammer.js library -->
